# sink

./: .ocamlformat  .ocamlformat-ignore  CONTRIBUTING.md  README.md  TODO.md  dune-project  ppx_alcotest.opam  ppx_brands.opam  ppx_deriving_branded.opam  ppx_deriving_infix.opam  ppx_deriving_phantom.opam  ppx_deriving_typeclass.opam  ppx_implements.opam  ppx_typeclass.opam  sink-lwt.opam  sink-unix.opam  sink.opam  sink.opam.template
src/ppx_alcotest/: dune  ppx_alcotest.ml
src/ppx_brands/: ppx_brands_deriver.ml  ppx_brands_rewriter.ml
src/ppx_deriving_branded/: dune  ppx_deriving_branded.ml
src/ppx_deriving_infix/: deriver.ml  dune  main.ml  ppx_deriving_infix.ml
src/ppx_deriving_phantom/: dune  ppx_deriving_phantom.ml
src/ppx_deriving_typeclass/: deriver.ml  dune  main.ml
src/ppx_implements/: dune  main.ml  ppx_implements.ml
src/ppx_typeclass/: dune
src/sink/: applicative.ml  array.ml  array.mli  assoc.ml  blit.ml  bool.ml  bool.mli  bounded.ml  bytes.ml  bytes.mli  char.ml  combinator.ml  dune  dyn.ml  dyn.mli  dyn_intf.ml  either.ml  either.mli  empty.ml  empty.mli  foldable.ml  foldable_intf.ml  fun.ml  fun.mli  functor.ml  generic.ml  generic.mli  higher.ml  hmap.ml  hmap.mli  import.ml  indexable.ml  int.ml  int.mli  int32.ml  int32.mli  int64.ml  lazy.ml  lazy.mli  list.ml  (+49 more)
src/sink-lwt/: cmd.ml  dune
src/sink-unix/: cmd.ml  cmd.mli  dune  fpath.ml  fpath.mli  fs.ml  sink_unix.ml
src/sink/kernel/: dune
src/sink/typeclasses/: applicative.ml  assoc.ml  bounded.ml  dune  enum.ml  eq.ml  filterable.ml  foldable.ml  foldable.mli  foldable_intf.ml  functor.ml  hashable.ml  higher.ml  import.ml  indexable.ml  monad.ml  monad_intf.ml  monoid.ml  num.ml  num_intf.ml  ord.ml  ord_intf.ml  ordering.ml  reifier.ml  semigroup.ml  show.ml  show.mli  show_intf.ml  sink_typeclasses.ml  traversable.ml  zippable.ml
test/sink/: dune  main.ml
